# synth8ic

./: .gitignore  AUTHORS  ChangeLog  MANIFEST  README.md  configure.ac  script.in
src/: Makefile.am  main.c
